Add social icons and contact section to README
Added social icons section with links to Facebook and Instagram.

--- a/README.html
+++ b/README.html
@@ -56,6 +56,17 @@
     h1.center {
       text-align: center;
     }
+    social-icons {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+h1.contact {
+  text-align: center;
+  color: #ff33a6;
+}
   </style>
  <body >
  <h1>WELCOME TO MY PORTFOLIO </H1>
@@ -81,5 +92,11 @@ alt="image"width="300"
 <img src="https://uploads.onecompiler.io/444r7txx7/3ywqzqks9/1000019322.jpg" alt="image" width="300"><img src="https://uploads.onecompiler.io/444r7txx7/3ywqzqks9/1000019276.jpg" alt="image" width="300">
 
 <img src="https://uploads.onecompiler.io/444r7txx7/3ywqzqks9/1000019372.jpg" alt="image" width="300" height="auto">    
+<br><br>
+<h1 class="contact">CONTACTS</h1>
+  <div class="social-icons">
+        <a href="https://www.facebook.com/profile.php?id=61584725588087"> ⓕ Facebook </a><br><br>
+        <a href="https://www.instagram.com/sadikshya_poudel2?igsh=cjJuaHAxbXJyb2dx"> 🅾 Instagram </a>
+    </div>
  </body>
 </html>
